fixed spacing in login.html, login.js, login.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+
+
 body {
     background: url(../images/dragon.jpg);
     background-repeat: no-repeat;
@@ -65,6 +67,3 @@ a {
     display: none;
 }
 
-#welcomeToAdventure {
-    display: block;
-}
